20240514 14:00 플레이어 추가 및 목적지 탐색 완료

--- a/Maze Explorer/Maze Explorer.csproj
+++ b/Maze Explorer/Maze Explorer.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Pos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
